:bug: fix progress text align issue
close #13997

--- a/components/progress/style/index.less
+++ b/components/progress/style/index.less
@@ -134,7 +134,7 @@
     margin: 0;
     color: @progress-text-color;
     white-space: normal;
-    padding: 0 6px;
+    padding: 0;
 
     .@{iconfont-css-prefix} {
       font-size: 14 / 12em;
